prepare for java21.